grammar.js
    compilation_unit: ($) => seq(optional($.shebang_directive), repeat($._top_level_item)),

    _top_level_item: ($) => prec(2, choice($._top_level_item_no_statement, $.global_statement)),

    global_statement: ($) => prec(1, $.statement),

    _attribute_list: ($) => choice($.attribute_list, $.preproc_if_in_attribute_list),

    // Higher precedence than `_reserved_identifier`: when both interpretations
    // are valid (e.g. `[field :` could be `_reserved_identifier` followed by
    // bogus `:`, or `attribute_target_specifier`), prefer the target-specifier
    // reading. `_reserved_identifier` still wins when no `:` follows, so
    // `[field]` continues to parse as collection_expression with identifier.
    class_declaration: ($) => seq($._class_declaration_initializer, $._declaration_list_body),

    _class_declaration_initializer: ($) =>
      seq(
        repeat($._attribute_list),
        repeat($.modifier),
        'class',
        field('name', $.identifier),
        repeat(choice($.type_parameter_list, $.parameter_list, $.base_list)),
        repeat($.type_parameter_constraints_clause)
      ),

    _declaration_list_body: ($) => choice(seq(field('body', $.declaration_list), $._optional_semi), ';'),

    modifier: () =>
      prec.right(
        choice(
          'abstract',
          'async',
          'const',
          'extern',
          'file',
          'fixed',
          'internal',
          'new',
          'override',
          'partial',
          'private',
          'protected',
          'public',
          'readonly',
          'required',
          // 'ref',     // `ref` as a modifier can only be used on struct declarations. Other than that it's a ref type or a ref parameter in a declaration.
          // 'scoped',  // `scoped` is either part of a scoped type or a scoped parameter. Both of which are handled outside of `modifier`.
          'sealed',
          'static',
          'unsafe',
          'virtual',
          'volatile'
        )
      ),

    declaration_list: ($) => seq('{', repeat($.declaration), '}'),

    method_declaration: ($) => seq($._method_signature, $._function_body),

    _method_signature: ($) =>
      seq(
        repeat($._attribute_list),
        repeat($.modifier),
        field('returns', $.type),
        optional($.explicit_interface_specifier),
        field('name', $.identifier),
        field('type_parameters', optional($.type_parameter_list)),
        field('parameters', $.parameter_list),
        repeat($.type_parameter_constraints_clause)
      ),

    parameter_list: ($) => seq('(', sep(choice($.parameter, $._parameter_array), ','), ')'),

    // `ref`, `out`, and `in` stay out of the repeat: reducing the repeat after them would compete with the shift of
    // the next token into an argument (`(ref x)`), whose precedence wins, so `(ref int i) =>` would read `ref int` as a
    // ref_type while a method's `(ref int i)` reads `ref` as a modifier.
    _parameter_type_with_modifiers: ($) =>
      seq(
        repeat(prec.left(alias(choice('this', 'scoped', 'readonly'), $.modifier))),
        optional(
          seq(
            alias(choice('ref', 'out', 'in'), $.modifier),
            repeat(prec.left(alias(choice('this', 'readonly'), $.modifier)))
          )
        ),
        field('type', $.type)
      ),

    parameter: ($) =>
      seq(
        repeat($._attribute_list),
        optional($._parameter_type_with_modifiers),
        field('name', $.identifier),
        optional(seq('=', $.expression))
      ),

    _parameter_array: ($) =>
      seq(repeat($._attribute_list), 'params', field('type', $.type), field('name', $.identifier)),

    argument_list: ($) => seq('(', commaSep($.argument), ')'),

    argument: ($) =>
      prec(
        1,
        seq(
          optional(seq(field('name', $.identifier), ':')),
          choice(seq(optional(choice('ref', 'out', 'in')), $.expression), seq('out', $.declaration_expression))
        )
      ),

    block: ($) => seq('{', repeat($.statement), '}'),

    arrow_expression_clause: ($) => seq('=>', $.expression),

    _function_body: ($) => choice(field('body', $.block), seq(field('body', $.arrow_expression_clause), ';'), ';'),

    variable_declaration: ($) => seq(field('type', $.type), commaSep1($.variable_declarator)),

    variable_declarator: ($) =>
      seq(
        choice(field('name', $.identifier), $.tuple_pattern),
        optional($.bracketed_argument_list),
        optional(seq('=', $.expression))
      ),

    _name: ($) => choice($.alias_qualified_name, $.qualified_name, $._simple_name),

    _simple_name: ($) => choice($.identifier, $.generic_name),

    implicit_type: () => prec.dynamic(1, 'var'),

    predefined_type: () =>
      token(
        choice(
          'bool',
          'byte',
          'char',
          'decimal',
          'double',
          'float',
          'int',
          'long',
          'object',
          'sbyte',
          'short',
          'string',
          'uint',
          'ulong',
          'ushort',
          'nint',
          'nuint',
          'void'
        )
      ),

    // Right-associative so that a parameter's `ref int x` keeps `ref` as a modifier instead of reducing a ref_type.
    ref_type: ($) => prec.right(seq('ref', optional('readonly'), field('type', $.type))),

    scoped_type: ($) => seq('scoped', field('type', $._scoped_base_type)),

    _scoped_base_type: ($) => choice($._name, $.ref_type),

    expression_statement: ($) => seq($._expression_statement_expression, ';'),

    local_declaration_statement: ($) =>
      seq(optional('await'), optional('using'), repeat($.modifier), $.variable_declaration, ';'),

    local_function_statement: ($) =>
      seq($._local_function_declaration, repeat($.type_parameter_constraints_clause), $._function_body),

    _local_function_declaration: ($) =>
      seq(
        repeat($._attribute_list),
        repeat($.modifier),
        field('type', $.type),
        field('name', $.identifier),
        field('type_parameters', optional($.type_parameter_list)),
        field('parameters', $.parameter_list)
      ),

    _expression_statement_expression: ($) =>
      choice(
        $.assignment_expression,
        $.invocation_expression,
        $.postfix_unary_expression,
        $.prefix_unary_expression,
        $.await_expression,
        $.object_creation_expression,
        $.parenthesized_expression
      ),

    assignment_expression: ($) =>
      seq(
        // An invocation can return a reference (`Unsafe.Add(ref x, i) = v`). It ends with `)`, so `=` after it adds few
        // parse states, unlike making any expression assignable.
        field('left', choice($.lvalue_expression, $.invocation_expression)),
        field('operator', choice('=', '+=', '-=', '*=', '/=', '%=', '&=', '^=', '|=', '<<=', '>>=', '>>>=', '??=')),
        field('right', $.expression)
      ),

    binary_expression: ($) =>
      choice(
        ...[
          ['&&', PREC.LOGICAL_AND],
          ['||', PREC.LOGICAL_OR],
          ['>>', PREC.SHIFT],
          ['>>>', PREC.SHIFT],
          ['<<', PREC.SHIFT],
          ['&', PREC.AND],
          ['^', PREC.XOR],
          ['|', PREC.OR],
          ['+', PREC.ADD],
          ['-', PREC.ADD],
          ['*', PREC.MULT],
          ['/', PREC.MULT],
          ['%', PREC.MULT],
          ['<', PREC.REL],
          ['<=', PREC.REL],
          ['==', PREC.EQUAL],
          ['!=', PREC.EQUAL],
          ['>=', PREC.REL],
          ['>', PREC.REL],
        ].map(([operator, precedence]) =>
          prec.left(
            precedence,
            seq(
              field('left', $.expression),
              // @ts-ignore
              field('operator', operator),
              field('right', $.expression)
            )
          )
        ),
        prec.right(
          PREC.COALESCING,
          seq(field('left', $.expression), field('operator', '??'), field('right', $.expression))
        )
      ),

    prefix_unary_expression: ($) =>
      prec(
        PREC.UNARY,
        choice(
          seq(choice('++', '--', '!', '~'), $.expression),
          prec.dynamic(-2, seq(choice('+', '-', '^'), $.expression))
        )
      ),

    // Pointer indirection is split by its operand. The assignable form, surfaced in `lvalue_expression`, takes an
    // lvalue (`*p`, `*(p)`, `**pp`) or an operand that ends in a closing token or an lvalue: a parenthesized
    // expression (`*(p + 1)`), a postfix expression (`*p++`), an address (`*&v`), or a cast of an lvalue, a
    // parenthesized, postfix, or invocation expression, or an address (`*(int*)p`, `*(long*)(p + 4)`, `*(T*)f()`,
    // `*(long*)&v`). Dereferencing any other expression (`*++p`) is only read: letting any expression be the assignable
    // form's operand lets `=` follow every expression that can be the operand, which grows the parser by about 4,800
    // states and nearly doubles the Wasm build, while these operands add about 550.
    //
    // Dynamic precedences: an assignable dereference -2, a read-only one -4, a read-only cast +1, an assignable cast -1,
    // and a unary `+`, `-`, `^`, or `&` -2. C# reads a parenthesized name as a cast only when the token after `)` is
    // `~`, `!`, `(`, an identifier, a literal, or a keyword (C# spec §12.9.8 Cast expressions), and these values keep
    // that reading: `(a) * b`, `(a) - b`, and `(a) & b` are binary expressions (0), not casts of `*b`, `-b`, or `&b`
    // (+1 - 2); `*(p) + 1` and `*(p) & x` apply to a dereference of `(p)` (-2), not to a dereference of a cast of `+1`
    // or `&x` (-5); `*(b)[0]` dereferences an element access (-2), not a cast of `[0]` (-3). Where both casts fit, they
    // give the same tree.
    invocation_expression: ($) =>
      prec(PREC.INVOCATION, seq(field('function', postfixOperand($)), field('arguments', $.argument_list))),

    await_expression: ($) => prec.right(PREC.UNARY, seq('await', $.expression)),

    member_access_expression: ($) =>
      prec(
        PREC.DOT,
        seq(
          field('expression', choice(postfixOperand($), $.predefined_type, $._name)),
          choice('.', '->'),
          field('name', $._simple_name)
        )
      ),

    object_creation_expression: ($) =>
      prec.right(
        seq(
          'new',
          field('type', $.type),
          field('arguments', optional($.argument_list)),
          field('initializer', optional($.initializer_expression))
        )
      ),

    lambda_expression: ($) =>
      prec(-1, seq($._lambda_expression_init, '=>', field('body', choice($.block, $.expression)))),

    _lambda_expression_init: ($) =>
      prec(
        -1,
        seq(
          repeat($._attribute_list),
          repeat(prec.dynamic(1, alias(choice('static', 'async'), $.modifier))),
          choice(
            field('parameters', prec(-1, alias($.identifier, $.implicit_parameter))),
            seq(optional(field('type', $.type)), field('parameters', $._lambda_parameters))
          )
        )
      ),

    anonymous_method_expression: ($) =>
      seq(
        repeat(prec.dynamic(1, alias(choice('static', 'async'), $.modifier))),
        'delegate',
        optional(field('parameters', $.parameter_list)),
        $.block
      ),

    null_literal: () => 'null',

    integer_literal: () =>
      token(
        seq(
          choice(
            decimalDigitSequence, // Decimal
            /0[xX][0-9a-fA-F_]*[0-9a-fA-F]+/, // Hex
            /0[bB][01_]*[01]+/ // Binary
          ),
          optional(/([uU][lL]?|[lL][uU]?)/)
        )
      ),

    _identifier_token: () =>
      token(
        seq(
          optional('@'),
          /(\p{XID_Start}|_|\\u[0-9A-Fa-f]{4}|\\U[0-9A-Fa-f]{8})(\p{XID_Continue}|\\u[0-9A-Fa-f]{4}|\\U[0-9A-Fa-f]{8})*/u
        )
      ),
    identifier: ($) => choice($._identifier_token, $._reserved_identifier),

    _reserved_identifier: () =>
      choice(
        prec(-1, '_'),
        'alias',
        'async',
        'ascending',
        'by',
        'descending',
        'equals',
        // attribute_target_specifier keywords — contextual only when followed
        // by `:` in `[target: Attr]` position. Anywhere else they're
        // identifiers. Without listing them here the LR table preferred the
        // literal-keyword interpretation, breaking `[type]`, `[field]`, etc.
        // as collection_expression elements. Excludes `'event'` and `'return'`
        // from the attribute_target_specifier choice — those are real C#
        // keywords and must not be accepted as identifiers anywhere else.
        'field',
        'file',
        'from',
        'global',
        'group',
        'into',
        'join',
        'let',
        'method',
        'notnull',
        'on',
        'orderby',
        'param',
        'partial',
        'property',
        'scoped',
        'select',
        'type',
        'typevar',
        'unmanaged',
        'var',
        'when',
        'where',
        'yield'
      ),

    ...preprocIf(
      '_in_method_signature',
      ($) => choice($.method_signature, alias($.preproc_if_in_method_signature, $.preproc_if)),
      0,
      false,
      true
    ),
    ...preprocIf('', ($) => $.declaration),
    ...preprocIf('_in_top_level', ($) => choice($._top_level_item_no_statement, $.statement)),
    ...preprocIf('_in_expression', ($) => $.expression, -2, false),
    ...preprocIf('_in_enum_member_declaration', ($) => $.enum_member_declaration, 0, false),
    ...preprocIf('_in_attribute_list', ($) => $.attribute_list, -1, false),
